--- a/CASE-ChatPDF-Faiss/chatpdf-faiss.ipynb
+++ b/CASE-ChatPDF-Faiss/chatpdf-faiss.ipynb
@@ -28,7 +28,7 @@
     "from typing import List, Tuple\n",
     "\n",
     "# Qwen-Turbo做推理模型\n",
-    "DASHSCOPE_API_KEY = 'sk-882e296067b744289acf27e6e20f3ec0'\n",
+    "DASHSCOPE_API_KEY = 'sk-'\n",
     "\n",
     "def extract_text_with_page_numbers(pdf) -> Tuple[str, List[int]]:\n",
     "    \"\"\"\n",
